--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DevMkT - Your Web Development Partner</title>
-    <link rel="website icon" type="png" href="img/logo.png">
+    <link rel="website icon" type="png" href="logo.png">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -53,8 +53,8 @@
 		<section id="portfolio">
 			<h2>Our Portfolio</h2>
 			<ul>
-				<li><a href="https://srdoctorwhoo.github.io/celio.veloso/"><img src="img/port1.png" alt="Project 1"></a></li>
-				<li><a href="#"><img src="img/port2.png" alt="Project 2" style="width: 80%; height: 85%;"></a></li>
+				<li><a href="https://srdoctorwhoo.github.io/celio.veloso/"><img src="port1.png" alt="Project 1"></a></li>
+				<li><a href="#"><img src="port2.png" alt="Project 2" style="width: 80%; height: 85%;"></a></li>
 			</ul>
 		</section>
 		<section id="contact">
