--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DevMkT - Your Web Development Partner</title>
-    <link rel="website icon" type="png" href="logo.png">
+    <link rel="website icon" type="png" href="img/logo.png">
 	<link rel="stylesheet" href="style.css">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 	<header>
@@ -53,24 +55,27 @@
 		<section id="portfolio">
 			<h2>Our Portfolio</h2>
 			<ul>
-				<li><a href="https://srdoctorwhoo.github.io/celio.veloso/"><img src="port1.png" alt="Project 1"></a></li>
-				<li><a href="#"><img src="port2.png" alt="Project 2" style="width: 80%; height: 85%;"></a></li>
+				<li><a href="https://srdoctorwhoo.github.io/celio.veloso/"><img src="img/port1.png" alt="Project 1"></a></li>
+				<li><a href="#"><img src="img/port2.png" alt="Project 2" style="width: 80%; height: 85%;"></a></li>
 			</ul>
 		</section>
 		<section id="contact">
 			<h2>Contact Us</h2>
-			<form>
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name"><br>
-
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email"><br>			<label for="message">Message:</label>
-			    <textarea id="message" name="message"></textarea><br>
-
-			<button type="submit">Send</button>
-		</form>
+                  <div class="social-icon">
+                    <ul>
+                        <li><a href="https://www.facebook.com/celio.velosoneto/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/_monkey.tech/?igshid=ZDdkNTZiNTM%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=61981908211&text=Ol%C3%A1%2C+estou+procurando+Celio%20Veloso%2C+do+departamento+Desenvolvimento+Web&type=phone_number&app_absent=0" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/celioveloso/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://github.com/Mktdeveloper" target="_blank"><i class="fab fa-github"></i></a></li>
+                    </ul>
+            </div>
+        </div>
 	</section>
 </main>
+</body>
+<script src="https://kit.fontawesome.com/ae61999827.js" crossorigin="anonymous"></script>
+    
 <footer>
 	<p>&copy; 2023 DevMktT. All rights reserved.</p>
 </footer>
