--- a/index.html
+++ b/index.html
@@ -1,82 +1,122 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>DevMkT - Your Web Development Partner</title>
-    <link rel="website icon" type="png" href="logo.png">
-	<link rel="stylesheet" href="style.css">
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts,googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <title>Célio Veloso</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section id="hero">
-			<h2>MonkeyTech</h2>
-			<p>At DevMT, we specialize in creating custom web solutions that meet your business needs. Whether you need a website, a web application, or an e-commerce platform, we have the expertise to deliver.</p>
-			<button>Get a Free Consultation</button>
-		</section>
-		<section id="about">
-			<h2>About Us</h2>
-			<p>We are a team of experienced web developers who are passionate about creating high-quality web solutions that help businesses grow. Our expertise includes:</p>
-			<ul>
-				<li>Website Development</li>
-				<li>Web Application Development</li>
-				<li>E-commerce Development</li>
-				<li>Mobile App Development</li>
-				<li>UI/UX Design</li>
-				<li>SEO Optimization</li>
-				<li>Network Compuiter</li>
-				<li>Automate Process</li>
-				<li>Sharepoint Sites</li>
-			</ul>
-		</section>
-		<section id="services">
-			<h2>Our Services</h2>
-			<ul style="list-style: none;">
-				<li><strong>Website Development</strong> - We design and develop custom websites that are tailored to your business needs.</li>
-				<li><strong>Web Application Development</strong> - We build web applications that are scalable, secure, and user-friendly.</li>
-				<li><strong>E-commerce Development</strong> - We create online stores that are optimized for sales and conversions.</li>
-				<li><strong>Mobile App Development</strong> - We develop cross-platform mobile apps that work seamlessly across all devices.</li>
-				<li><strong>UI/UX Design</strong> - We create engaging and intuitive user interfaces that enhance the user experience.</li>
-				<li><strong>SEO Optimization</strong> - We optimize your website for search engines to increase your online visibility and attract more customers.</li>
-			</ul>
-		</section>
-		<section id="portfolio">
-			<h2>Our Portfolio</h2>
-			<ul>
-				<li><a href="https://srdoctorwhoo.github.io/celio.veloso/"><img src="port1.png" alt="Project 1"></a></li>
-				<li><a href="#"><img src="port2.png" alt="Project 2" style="width: 80%; height: 85%;"></a></li>
-			</ul>
-		</section>
-		<section id="contact">
-			<h2>Contact Us</h2>
-                  <div class="social-icon">
-                    <ul>
-                        <li><a href="https://www.facebook.com/celio.velosoneto/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/_monkey.tech/?igshid=ZDdkNTZiNTM%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="https://api.whatsapp.com/send/?phone=61981908211&text=Ol%C3%A1%2C+estou+procurando+Celio%20Veloso%2C+do+departamento+Desenvolvimento+Web&type=phone_number&app_absent=0" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/celioveloso/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="https://github.com/Mktdeveloper" target="_blank"><i class="fab fa-github"></i></a></li>
-                    </ul>
+    <!--Nav-->
+    <header>
+        <a href="" class="logo">Celio</a> 
+        <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#me">About</a></li>
+            <Li><a href="#maps">Contact</a></Li>
+            <Li><a href="game.html">Game</a></Li>
+        </ul>
+    </header>
+    <!--Imagens-->
+    <section class="select1">
+        <img src="stars.png" id="stars">
+        <img src="moon.png" id="moon">
+        <img src="mountains_behind.png" id="mountains_behind">
+        <h2 id="text1">Welcome</h2>
+        <a href="#sec" id="btn">Certification</a>
+        <img src="mountains_front.png" id="mountains_front">
+    </section>
+    <!--Certificados-->
+    <div class="sec" id="sec">
+        <div class="container">
+            <div class="row" style="color: #fff; text-align: center;">
+                <h2 style="text-align: center;">Certification</h2><br>
+                <div class="col-md-6"><p>Fundação Bradesco</p><ul style="list-style: none;">
+                    <Li>HTML</Li>
+                    <Li>CSS</Li>
+                    <li>Sharepoint</li>
+                </ul></div>
+                <div class="col-md-6"><p>Senac</p><ul style="list-style: none;">
+                    <li>Computer Maintenance</li>
+                    <li>Computer Network</li>
+                    <li>Developer Java</li>
+                </ul></div>
             </div>
         </div>
-	</section>
-</main>
-</body>
-<script src="https://kit.fontawesome.com/ae61999827.js" crossorigin="anonymous"></script>
-    
-<footer>
-	<p>&copy; 2023 DevMktT. All rights reserved.</p>
-</footer>
+    </div>
+    <!--Sobre Mim-->
+    <section class="about" id="me">
+        <div class="main">
+            <img src="Celio.jpg">
+            <div class="about-text">
+                <H1>About Me</H1>
 
+                <h5>Developer Web & <span>Automation Engineer</span></h5>
+                <p>Hello, I’m Celio, an aspiring developer who likes to learn about technology. I have knowledge in office process automation, ERP systems and network infrastructure. I’m curious, creative and determined to achieve my professional goals.
+                    </p>
+                <button type="button"><a href="#maps">Let's Talk</button></a>
+            </div>
+        </div>
+    </section>
+    <!--Redes-Sociais-->
+    <div class="contact2">
+    <h1 class="ContactH1" id="maps">Contact</h1><br><br><br>
+      <div class="social-icon">
+        <ul>
+            <li><a href="https://www.facebook.com/celio.velosoneto/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/celiosaz/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://api.whatsapp.com/send/?phone=61998548211&text=Ol%C3%A1%2C+estou+procurando+Celio%20Veloso%2C+do+departamento+Processos+e+Dados&type=phone_number&app_absent=0" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/celioveloso/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://github.com/SrDoctorWhoo" target="_blank"><i class="fab fa-github"></i></a></li>
+        </ul>
+    </div></div>
+    <!--Formulario-->
+    <section class="contact">
+        <div class="contact-container">    
+            <div class="form-container">
+                <h3>Message Us</h3>
+                <form action="" class="contact-form">
+                   <input type="text" placeholder="Your Name" required> 
+                   <input type="email" name="" id="" placeholder="Enter Your E-mail..." required>
+                   <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..." required></textarea>
+                   <input type="submit" value="Send" id="send-button">
+                </form>
+            </div>
+    <!--Mapa-->
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122897.86325293902!2d-48.019758770639896!3d-15.721581448687422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935a3d18df9ae275%3A0x738470e469754a24!2zQnJhc8OtbGlhLCBERg!5e0!3m2!1spt-BR!2sbr!4v1682834661526!5m2!1spt-BR!2sbr" width="600"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        </div>
+    </div>
+    </section>
+
+    <script src="https://kit.fontawesome.com/ae61999827.js" crossorigin="anonymous"></script>
+    <script>
+        let stars = document.getElementById('stars');
+        let moon = document.getElementById('moon');
+        let mountains_behind = document.getElementById('mountains_behind');
+        let text = document.getElementById('text1');
+        let btn = document.getElementById('btn');
+        let mountains_front = document.getElementById('mountains_front');
+        let header = document.querySelector('header');
+
+        window.addEventListener('scroll', function(){
+            let value = window.scrollY;
+            stars.style.left = value * 0.25 + 'px';
+            moon.style.top = value * 1.05 + 'px';
+            mountains_behind.style.top = value * 0.5 + 'px';
+            mountains_front.style.top = value * 0 + 'px';
+            text1.style.marginRight = value * 4 + 'px';
+            text1.style.marginTop = value * 1.5 + 'px';
+            btn.style.marginTop = value * 1.5 + 'px';
+            header.style.marginTop = value * 0.5 + 'px';
+        })
+    </script>
+</body>
+<footer>“Copyright © 2023. Todos os direitos reservados.”
+</footer>
+</html>
